--- a/practice/html/A-1.html
+++ b/practice/html/A-1.html
@@ -52,7 +52,19 @@
                 </ul>
             </nav>
         </header>
-        <div id="slideArea"></div>
+        <div id="slideArea">
+            <div class="slide">
+                <div class="img1"></div>
+                <div class="text">Slide1</div>
+            </div>
+            <div class="slide">
+                <div class="img2"></div>
+                <div class="text">Slide2</div>
+            </div>
+            <div class="slide">
+                <div class="img3"></div>
+                <div class="text">Slide3</div>
+            </div>
         <div id="container"></div>
         <footer></footer>
     </div>
