--- a/practice/html/index01.html
+++ b/practice/html/index01.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/A-1.css">
+    <link rel="stylesheet" href="../css/style01.css">
     <script src="../js/jquery.min.js"></script>
-    <script src="../js/A-1.js"></script>
+    <script src="../js/script01.js"></script>
     <title>A-1유형</title>
 </head>
 <body>
@@ -65,7 +65,23 @@
                 <div class="img3"></div>
                 <div class="text">Slide3</div>
             </div>
-        <div id="container"></div>
+        </div>
+        <div id="container">
+            <div class="ngArea">
+                <div class="galleryTab">공지사항</div>
+                <div class="noticeTab off">갤러리</div>
+                <div class="notice">
+                    <ul>
+                        <li>공지사항1</li>
+                        <li>공지사항1</li>
+                        <li>공지사항1</li>
+                        <li>공지사항1</li>
+                        <li>공지사항1</li>
+                    </ul>
+                </div>
+                <!-- <div class="gallery d-none">갤러리</div> -->
+            </div>
+        </div>
         <footer></footer>
     </div>
 </body>
